[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level parts/give_out_floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level parts/spawn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resorces/industrial.v2.png" type="Texture" id=4]
[ext_resource path="res://soundmaker/soundmaker.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/level_9.gd" type="Script" id=6]
[ext_resource path="res://Level parts/air_spawn.tscn" type="PackedScene" id=7]

[sub_resource type="TileSet" id=1]
0/name = "industrial.v2.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 32, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "industrial.v2.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 176, 112, 96, 96 )
1/tile_mode = 1
1/autotile/bitmask_mode = 1
1/autotile/bitmask_flags = [ Vector2( 0, 1 ), 176, Vector2( 0, 2 ), 50, Vector2( 1, 1 ), 58, Vector2( 1, 2 ), 184, Vector2( 2, 0 ), 152, Vector2( 2, 1 ), 26, Vector2( 3, 0 ), 186, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 154, Vector2( 3, 3 ), 178, Vector2( 3, 4 ), 146, Vector2( 3, 5 ), 18, Vector2( 4, 1 ), 128, Vector2( 4, 2 ), 146, Vector2( 4, 3 ), 146, Vector2( 4, 4 ), 146, Vector2( 5, 0 ), 146 ]
1/autotile/icon_coordinate = Vector2( 1, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "industrial.v2.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 192, 64, 64, 48 )
2/tile_mode = 1
2/autotile/bitmask_mode = 1
2/autotile/bitmask_flags = [ Vector2( 0, 0 ), 176, Vector2( 0, 1 ), 178, Vector2( 0, 2 ), 50, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 184, Vector2( 1, 2 ), 58, Vector2( 2, 0 ), 56, Vector2( 2, 1 ), 154, Vector2( 2, 2 ), 26, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 146 ]
2/autotile/icon_coordinate = Vector2( 3, 1 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "industrial.v2.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 128, 32, 64, 48 )
3/tile_mode = 1
3/autotile/bitmask_mode = 1
3/autotile/bitmask_flags = [ Vector2( 0, 0 ), 176, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 50, Vector2( 1, 0 ), 56, Vector2( 1, 1 ), 178, Vector2( 1, 2 ), 56, Vector2( 2, 0 ), 58, Vector2( 2, 1 ), 184, Vector2( 2, 2 ), 26, Vector2( 3, 0 ), 152, Vector2( 3, 1 ), 154, Vector2( 3, 2 ), 511 ]
3/autotile/icon_coordinate = Vector2( 1, 0 )
3/autotile/tile_size = Vector2( 16, 16 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "industrial.v2.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 80, 208, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "industrial.v2.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 192, 0, 64, 16 )
5/tile_mode = 1
5/autotile/bitmask_mode = 1
5/autotile/bitmask_flags = [ Vector2( 0, 0 ), 48, Vector2( 1, 0 ), 56, Vector2( 2, 0 ), 24, Vector2( 3, 0 ), 325 ]
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 16, 16 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "industrial.v2.png 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 352, 32, 32, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "industrial.v2.png 7"
7/texture = ExtResource( 4 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 80, 208, 16, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[node name="level_9" type="Node2D"]
script = ExtResource( 6 )

[node name="TileMap2" type="TileMap" parent="."]
position = Vector2( -80, -60 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 720945, 1, 1, 786479, 1, 65536, 786480, 1, 1, 786481, 1, 65538, 852014, 1, 65536, 852015, 1, 65538, 917549, 1, 65536, 917550, 1, 65538, 983084, 1, 65536, 983085, 1, 65538, 1048618, 1, 65536, 1048619, 1, 1, 1048620, 1, 65538, 1114153, 1, 65536, 1114154, 1, 65538, 1179689, 1, 65539, 1245225, 1, 131072, 1245226, 1, 2, 1310762, 1, 131072, 1310763, 1, 2, 1310769, 1, 65536, 1310770, 1, 1, 1376299, 1, 131072, 1376300, 1, 2, 1376303, 1, 65536, 1376304, 1, 1, 1376305, 1, 65538, 1441836, 1, 131072, 1441837, 1, 1, 1441838, 1, 1, 1441839, 1, 65538, 1441841, 2, 0, 1441842, 2, 65539, 1507374, 2, 0, 1507375, 2, 2, 1507376, 2, 1, 1507377, 2, 131074, 1638397, 2, 65539, 1638398, 2, 2, 1638399, 2, 2, 1572864, 2, 2, 1572865, 2, 2, 1572866, 2, 1, 1572867, 2, 2, 1572868, 2, 1, 1572869, 2, 2, 1572870, 2, 1, 1572871, 2, 2, 1572872, 2, 1, 1572873, 2, 3, 1572910, 2, 65539, 1638409, 2, 131072, 1638410, 2, 1, 1638411, 2, 2, 1638412, 2, 1, 1638413, 2, 2, 1638414, 2, 3, 1638443, 2, 0, 1638444, 2, 1, 1638445, 2, 1, 1638446, 2, 131074, 1703950, 2, 131072, 1703951, 2, 3, 1703978, 2, 0, 1703979, 2, 131074, 1769487, 2, 131072, 1769488, 2, 1, 1769489, 2, 3, 1769513, 2, 0, 1769514, 2, 131074, 1835025, 2, 131072, 1835026, 2, 2, 1835027, 2, 3, 1835049, 2, 65539, 1900563, 2, 131072, 1900564, 2, 3, 1900585, 2, 65539, 1966100, 2, 131072, 1966101, 2, 3, 1966120, 2, 0, 1966121, 2, 131074, 2031637, 2, 131072, 2031638, 2, 3, 2031656, 2, 65539, 2097174, 2, 65539, 2097191, 2, 0, 2097192, 2, 131074, 2162710, 2, 131072, 2162711, 2, 3, 2162726, 2, 0, 2162727, 2, 131074, 2228247, 2, 65539, 2228261, 2, 0, 2228262, 2, 131074, 2293783, 2, 131072, 2293784, 2, 65539, 2293797, 2, 65539 )

[node name="TileMap3" type="TileMap" parent="."]
position = Vector2( -80, -60 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 196641, 2, 65539, 262177, 2, 65539, 327713, 2, 65539, 393249, 2, 65539, 458785, 2, 65539, 524321, 2, 131072, 524322, 2, 2, 524323, 2, 2, 524324, 2, 2, 524325, 2, 1, 524326, 2, 2, 524327, 2, 1, 524328, 2, 3, 589864, 2, 131072, 589865, 2, 2, 589866, 2, 1, 589867, 2, 2, 589868, 2, 2, 589869, 2, 1, 589870, 2, 2, 589871, 2, 2, 589872, 2, 3, 655408, 2, 131072, 655409, 2, 2, 655410, 2, 2, 655411, 2, 2, 655412, 2, 65539, 786430, 3, 1, 786431, 3, 3, 720903, 3, 0, 720904, 3, 131073, 720905, 3, 131073, 720906, 3, 131073, 720907, 3, 1, 720908, 3, 131073, 720909, 3, 3, 851967, 3, 131072, 786432, 3, 1, 786433, 3, 1, 786434, 3, 131073, 786435, 3, 131073, 786436, 3, 131073, 786437, 3, 1, 786438, 3, 131073, 786439, 3, 131074, 786445, 3, 131072, 786446, 3, 1, 786447, 3, 3, 851983, 3, 131072, 851984, 3, 131073, 851985, 3, 3, 917521, 3, 131072, 917522, 3, 3, 983058, 3, 131072, 983059, 3, 131073, 983060, 3, 3, 1048596, 3, 131072, 1048597, 3, 3, 1114133, 3, 131072, 1114134, 3, 131073, 1114135, 3, 3, 1179671, 3, 131072, 1179672, 3, 3, 1245208, 3, 131072, 1245209, 3, 3, 1310745, 3, 131072, 1310746, 3, 3, 1376282, 3, 131072, 1376283, 3, 3, 1441819, 3, 131072, 1441820, 3, 3, 1507356, 3, 131072, 1507357, 3, 3, 1572893, 3, 131072, 1572894, 3, 131073, 1572895, 3, 3, 1638431, 3, 131072, 1638432, 3, 3, 1703968, 3, 131072, 1703969, 3, 131073, 1703970, 3, 3, 1769506, 3, 131072, 1769507, 3, 1, 1769508, 3, 3, 1835044, 3, 131072, 1835045, 3, 131073, 1835046, 3, 1, 1835047, 3, 131073, 1835048, 3, 3, 1900584, 3, 131072, 1900585, 3, 1, 1900586, 3, 1, 1900587, 3, 1, 1900588, 3, 1, 1900589, 3, 3, 1966125, 3, 131072, 1966126, 3, 1, 1966127, 3, 131073, 1966128, 3, 1, 1966129, 3, 131073, 1966130, 3, 131073, 1966131, 3, 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -8, -20 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 196622, 1, 65536, 196623, 1, 1, 196624, 1, 1, 196625, 1, 1, 196626, 1, 1, 196627, 1, 1, 196628, 1, 1, 196629, 1, 1, 196630, 1, 1, 196631, 1, 131073, 196632, 1, 1, 196633, 1, 1, 196634, 1, 1, 196635, 1, 1, 196636, 1, 1, 196637, 1, 1, 196638, 1, 1, 196639, 1, 1, 196640, 1, 1, 196641, 1, 2, 262157, 1, 65536, 262158, 1, 65538, 262167, 1, 262147, 262177, 1, 65539, 327689, 1, 65536, 327690, 1, 1, 327691, 1, 1, 327692, 1, 1, 327693, 1, 65538, 327703, 1, 327683, 327713, 1, 131076, 393225, 1, 65539, 393239, 5, 0, 393240, 5, 0, 393249, 1, 262147, 458760, 1, 65536, 458761, 1, 65538, 458774, 5, 0, 458775, 5, 0, 458776, 5, 0, 458777, 5, 0, 458785, 1, 196612, 524296, 1, 262147, 524309, 5, 0, 524310, 5, 0, 524311, 5, 0, 524312, 5, 0, 524313, 5, 0, 524314, 5, 0, 524321, 1, 262148, 589832, 1, 262148, 589844, 5, 0, 589845, 5, 0, 589846, 5, 0, 589847, 5, 0, 589848, 5, 0, 589849, 5, 0, 589850, 5, 0, 589851, 5, 0, 589857, 1, 262147, 655368, 1, 65539, 655379, 5, 0, 655380, 5, 0, 655381, 5, 0, 655382, 5, 0, 655383, 5, 0, 655384, 5, 0, 655385, 5, 0, 655386, 5, 0, 655387, 5, 0, 655388, 5, 0, 655393, 1, 131076, 720904, 1, 262148, 720914, 5, 0, 720915, 5, 0, 720916, 5, 0, 720917, 5, 0, 720918, 5, 0, 720919, 5, 0, 720920, 5, 0, 720921, 5, 0, 720922, 5, 0, 720923, 5, 0, 720924, 5, 0, 720925, 5, 0, 720929, 1, 262147, 786440, 1, 262148, 786449, 5, 0, 786450, 5, 0, 786451, 5, 0, 786452, 5, 0, 786453, 5, 0, 786454, 5, 0, 786455, 5, 0, 786456, 5, 0, 786457, 5, 0, 786458, 5, 0, 786459, 5, 0, 786460, 5, 0, 786461, 5, 0, 786462, 5, 0, 786465, 1, 262148, 851976, 1, 262148, 851984, 5, 0, 851985, 5, 0, 851986, 5, 0, 851987, 5, 0, 851988, 5, 0, 851989, 5, 0, 851990, 5, 0, 851991, 5, 0, 851992, 5, 0, 851993, 5, 0, 851994, 5, 0, 851995, 5, 0, 851996, 5, 0, 851997, 5, 0, 851998, 5, 0, 851999, 1, 1, 852000, 1, 1, 852001, 1, 131075, 917512, 1, 262148, 917519, 5, 0, 917520, 5, 0, 917521, 5, 0, 917522, 5, 0, 917523, 5, 0, 917524, 5, 0, 917525, 5, 0, 917526, 5, 0, 917527, 5, 0, 917528, 5, 0, 917529, 5, 0, 917530, 5, 0, 917531, 5, 0, 917532, 5, 0, 917533, 5, 0, 917537, 1, 131076, 983048, 1, 65539, 983054, 5, 0, 983055, 5, 0, 983056, 5, 0, 983057, 5, 0, 983058, 5, 0, 983059, 5, 0, 983060, 5, 0, 983061, 5, 0, 983062, 5, 0, 983063, 5, 0, 983064, 5, 0, 983065, 5, 0, 983066, 5, 0, 983067, 5, 0, 983068, 5, 0, 983073, 1, 5, 1048584, 1, 262148, 1048589, 5, 0, 1048590, 5, 0, 1048591, 5, 0, 1048592, 5, 0, 1048593, 5, 0, 1048594, 5, 0, 1048595, 5, 0, 1048596, 5, 0, 1048597, 5, 0, 1048598, 5, 0, 1048599, 5, 0, 1048600, 5, 0, 1048601, 5, 0, 1048602, 5, 0, 1048603, 5, 0, 1048609, 1, 5, 1114120, 1, 131076, 1114124, 5, 0, 1114125, 5, 0, 1114126, 5, 0, 1114127, 5, 0, 1114128, 5, 0, 1114129, 5, 0, 1114130, 5, 0, 1114131, 5, 0, 1114132, 5, 0, 1114133, 5, 0, 1114134, 5, 0, 1114135, 5, 0, 1114136, 5, 0, 1114137, 5, 0, 1114138, 5, 0, 1114145, 1, 196612, 1179656, 1, 196611, 1179657, 1, 1, 1179658, 1, 1, 1179659, 5, 0, 1179660, 5, 0, 1179661, 5, 0, 1179662, 5, 0, 1179663, 5, 0, 1179664, 5, 0, 1179665, 5, 0, 1179666, 5, 0, 1179667, 5, 0, 1179668, 5, 0, 1179669, 5, 0, 1179670, 5, 0, 1179671, 5, 0, 1179672, 5, 0, 1179673, 5, 0, 1179681, 1, 65539, 1245192, 1, 196612, 1245196, 5, 0, 1245197, 5, 0, 1245198, 5, 0, 1245199, 5, 0, 1245200, 5, 0, 1245201, 5, 0, 1245202, 5, 0, 1245203, 5, 0, 1245204, 5, 0, 1245205, 5, 0, 1245206, 5, 0, 1245207, 5, 0, 1245208, 5, 0, 1245217, 1, 65539, 1310728, 1, 65539, 1310733, 5, 0, 1310734, 5, 0, 1310735, 5, 0, 1310736, 5, 0, 1310737, 5, 0, 1310738, 5, 0, 1310739, 5, 0, 1310740, 5, 0, 1310741, 5, 0, 1310742, 5, 0, 1310743, 5, 0, 1310753, 1, 196612, 1376264, 1, 262148, 1376270, 5, 0, 1376271, 5, 0, 1376272, 5, 0, 1376273, 5, 0, 1376274, 5, 0, 1376275, 5, 0, 1376276, 5, 0, 1376277, 5, 0, 1376278, 5, 0, 1376289, 1, 262147, 1441800, 1, 5, 1441807, 5, 0, 1441808, 5, 0, 1441809, 5, 0, 1441810, 5, 0, 1441811, 5, 0, 1441812, 5, 0, 1441813, 5, 0, 1441825, 1, 196612, 1507336, 1, 5, 1507344, 5, 0, 1507345, 5, 0, 1507346, 5, 0, 1507347, 5, 0, 1507348, 5, 0, 1507361, 1, 131076, 1572872, 1, 262148, 1572881, 5, 0, 1572882, 5, 0, 1572883, 5, 0, 1572897, 1, 5, 1638408, 1, 262147, 1638418, 5, 0, 1638426, 1, 65536, 1638427, 1, 1, 1638428, 1, 1, 1638429, 1, 1, 1638430, 1, 1, 1638431, 1, 1, 1638432, 1, 1, 1638433, 1, 65538, 1703944, 1, 131072, 1703945, 1, 1, 1703946, 1, 1, 1703947, 1, 1, 1703948, 1, 1, 1703949, 1, 2, 1703962, 1, 5, 1769485, 1, 131072, 1769486, 1, 1, 1769487, 1, 1, 1769488, 1, 1, 1769489, 1, 1, 1769490, 1, 1, 1769491, 1, 1, 1769492, 1, 1, 1769493, 1, 1, 1769494, 1, 1, 1769495, 1, 1, 1769496, 1, 1, 1769497, 1, 1, 1769498, 1, 65538 )

[node name="give_out_floors" type="Control" parent="."]
margin_left = -1.0
margin_top = 1.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="give_out_floor" parent="give_out_floors" instance=ExtResource( 2 )]
position = Vector2( 224, 209 )

[node name="give_out_floor2" parent="give_out_floors" instance=ExtResource( 2 )]
position = Vector2( 208, 209 )

[node name="give_out_floor3" parent="give_out_floors" instance=ExtResource( 2 )]
position = Vector2( 192, 209 )

[node name="give_out_floor4" parent="give_out_floors" instance=ExtResource( 2 )]
position = Vector2( 176, 209 )

[node name="give_out_floor5" parent="give_out_floors" instance=ExtResource( 2 )]
position = Vector2( 160, 209 )

[node name="give_out_floor6" parent="give_out_floors" instance=ExtResource( 2 )]
position = Vector2( 144, 209 )

[node name="give_out_floor7" parent="give_out_floors" instance=ExtResource( 2 )]
position = Vector2( 434.778, 257.794 )

[node name="give_out_floor8" parent="give_out_floors" instance=ExtResource( 2 )]
position = Vector2( 450.778, 257.794 )

[node name="give_out_floor9" parent="give_out_floors" instance=ExtResource( 2 )]
position = Vector2( 466.778, 257.794 )

[node name="give_out_floor10" parent="give_out_floors" instance=ExtResource( 2 )]
position = Vector2( 482.778, 257.794 )

[node name="give_out_floor11" parent="give_out_floors" instance=ExtResource( 2 )]
position = Vector2( 498.778, 257.794 )

[node name="give_out_floor12" parent="give_out_floors" instance=ExtResource( 2 )]
position = Vector2( 514.778, 257.794 )

[node name="give_out_floor13" parent="give_out_floors" instance=ExtResource( 2 )]
position = Vector2( 304.63, 387.835 )
rotation = 1.5708

[node name="give_out_floor14" parent="give_out_floors" instance=ExtResource( 2 )]
position = Vector2( 304.787, 404.937 )
rotation = 1.5708

[node name="cam" type="Camera2D" parent="."]
position = Vector2( 320, 240 )
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="air_spawn_1" parent="cam" instance=ExtResource( 7 )]
position = Vector2( -328, -248 )

[node name="air_spawn_2" parent="cam" instance=ExtResource( 7 )]
position = Vector2( 328, -248 )

[node name="air_spawn_3" parent="cam" instance=ExtResource( 7 )]
position = Vector2( 328, 248 )

[node name="air_spawn_4" parent="cam" instance=ExtResource( 7 )]
position = Vector2( -328, 248 )

[node name="soundmaker" parent="cam" instance=ExtResource( 5 )]
position = Vector2( -12, 4 )

[node name="spawn_1" parent="." instance=ExtResource( 3 )]
position = Vector2( 376, 124 )

[node name="spawn_2" parent="." instance=ExtResource( 3 )]
position = Vector2( 288, 344 )

[node name="spawn_3" parent="." instance=ExtResource( 3 )]
position = Vector2( 220, 276 )

[node name="spawn_4" parent="." instance=ExtResource( 3 )]
position = Vector2( 440, 188 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 340.783, 225.877 )

[node name="Walls" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 480, 136 )
collision_layer = 8
collision_mask = 5

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -80, -60 )
polygon = PoolVector2Array( -28, -36, -28, 0, -8, 0, -8, 16, 8, 16, 8, 32, 24, 32, 24, 48, 40, 48, 40, 64, 56, 64, 56, 80, 72, 80, 72, 96, 88, 96, 88, 116, 124, 116, 124, -36 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -300, -68 )
polygon = PoolVector2Array( 48, -28, 48, -12, 32, -12, 32, 4, -32, 4, -32, 36, -48, 36, -48, 136, 68, 136, 68, 120, 84, 120, 84, 104, 100, 104, 100, 88, 116, 88, 116, 72, 132, 72, 132, 56, 148, 56, 148, 40, 164, 40, 164, 24, 180, 24, 180, 8, 184, 8, 184, -28 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -16, 24 )
polygon = PoolVector2Array( 24, 40, 24, 44, 8, 44, 8, 60, -8, 60, -8, 76, -24, 76, -24, 92, 60, 92, 60, 40 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -344, 36 )
polygon = PoolVector2Array( -4, 100, 32, 100, 32, 96, 48, 96, 48, 80, 64, 80, 64, 64, 80, 64, 80, 48, 80, 48, -4, 48 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -332, 152 )
polygon = PoolVector2Array( 84, 60, 84, 44, 68, 44, 68, 28, 52, 28, 52, 12, 36, 12, 36, -4, 20, -4, 20, -8, -16, -8, -16, 112, 64, 112, 64, 128, 148, 128, 148, 108, 132, 108, 132, 92, 116, 92, 116, 76, 100, 76, 100, 60 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -116, 120 )
polygon = PoolVector2Array( 28, 28, 28, 44, 12, 44, 12, 60, -4, 60, -4, 76, -20, 76, -20, 92, -36, 92, -36, 108, -52, 108, -52, 160, 48, 160, 48, 128, 160, 128, 160, 12, 44, 12, 44, 28 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
position = Vector2( -80, -60 )
polygon = PoolVector2Array( -276, 184, -276, 20, -336, -80, -400, -80, -404, 416, 248, 416, 248, -80, -336, -80, -276, 20, -260, 20, -260, -12, -196, -12, -196, -28, -180, -28, -180, -44, 132, -44, 132, 316, 20, 316, 20, 348, -196, 348, -196, 332, -276, 332 )

[node name="Spawn" type="Timer" parent="."]
autostart = true

[node name="waiting" type="Timer" parent="."]
wait_time = 4.0
[connection signal="timeout" from="Spawn" to="." method="_on_Spawn_timeout"]
[connection signal="timeout" from="waiting" to="." method="_on_waiting_timeout"]
